--- a/keepportlandreal/css/site.css
+++ b/keepportlandreal/css/site.css
@@ -8,3 +8,12 @@ body {
   font-size: 12px;
   color: #888;
 }
+footer{
+  position:fixed;
+  bottom: 0px;
+  background-color: #c7c7c7c7;
+  border: solid 1px #000000;
+  border-radius: 5px;
+  display: block;
+  font-size: 14px;
+}
