--- a/keepportlandreal/css/site.css
+++ b/keepportlandreal/css/site.css
@@ -1,19 +1,24 @@
 body {
   font-family: sans-serif;
   font-size: 14px;
-  color: #222;
+  color: #c73441;
 }
 .menu{
   float: right;
-  font-size: 12px;
-  color: #888;
+  font-size: 14px;
+  color: #881318;
 }
+
+h1{
+  text-align: center;
+}
+
 footer{
   position:fixed;
-  bottom: 0px;
-  background-color: #c7c7c7c7;
-  border: solid 1px #000000;
-  border-radius: 5px;
+  bottom: 10px;
+  background-color: rgba(194, 199, 170, 0.78);
+  border: solid 2px #000000;
+  border-radius: 20px;
   display: block;
   font-size: 14px;
 }
